Link tracking KPI
